# werewolf-agent-sim

./: .gitignore  CLAUDE.md  PROGRESS_REPORT.md  README.md  docker-compose.yml  exercise_7_minimal.ipynb  exercise_7_reordered.ipynb  exercise_7_states.py  pyproject.toml
Agents/: __init__.py  agents.py  compute_metrics.py  constants.py  extraction.py  formatters.py  game_config.py  llm_factory.py  main.py  memory.py  memory_batch_deduplication.py  memory_deduplication.py  memory_persistence.py  nodes.py  prompt_inputs.py  prompts.py  reranker.py  retrieval_filters.py  schemas.py  state.py  tracing.py
batch_results/: batch_20260511_140221.jsonl  memory_ablation.jsonl  v2_fresh_memory_001.jsonl  wolf_only_batch.jsonl  wolf_vs_all_enabled_10.jsonl
eval_configs/: filtering_dataset.json  filtering_experiment.json  rerank_dirty_store.json  reranking_experiment.json  store_dedup_comparison.json
eval_results/: memory_ablation_all_enabled_vs_wolf_only.jsonl
eval_sets/: auto_dedup_v1.jsonl  auto_dedup_v1.manifest.json  auto_dedup_v1_cross_game.jsonl  auto_dedup_v1_cross_game.manifest.json  batch_dedup_clusters_v4.json  batch_dedup_golden_labels.json  dedup_ft_predictions.jsonl  dedup_v1.jsonl  dedup_v1.manifest.json  dedup_v2.jsonl  dedup_v2.manifest.json  dedup_v2_golden_labels.json  dedup_v2_replay_25flash_prompt_v2.jsonl  dedup_v2_replay_25pro_prompt_v2.jsonl  dedup_v2_replay_35flash_prompt_v10.jsonl  dedup_v2_replay_35flash_prompt_v11.jsonl  dedup_v2_replay_35flash_prompt_v11b.jsonl  dedup_v2_replay_35flash_prompt_v2.jsonl  dedup_v2_replay_35flash_prompt_v3.jsonl  dedup_v2_replay_35flash_prompt_v5.jsonl  dedup_v2_replay_35flash_prompt_v6.jsonl  dedup_v2_replay_35flash_prompt_v7.jsonl  dedup_v2_replay_35flash_prompt_v8.jsonl  dedup_v2_replay_35flash_prompt_v9d.jsonl  dedup_v2_replay_3flash_prompt_v2.jsonl  dedup_v2_replay_flash_lite_prompt_v10.jsonl  dedup_v2_replay_flash_lite_prompt_v10_vertex.jsonl  dedup_v2_replay_flash_lite_prompt_v11.jsonl  dedup_v2_replay_flash_lite_prompt_v11b.jsonl  dedup_v2_replay_flash_lite_prompt_v2.jsonl  dedup_v2_replay_flash_lite_prompt_v3.jsonl  dedup_v2_replay_flash_lite_prompt_v4.jsonl  dedup_v2_replay_flash_lite_prompt_v5.jsonl  dedup_v2_replay_flash_lite_prompt_v6.jsonl  dedup_v2_replay_flash_lite_prompt_v7.jsonl  dedup_v2_replay_flash_lite_prompt_v8.jsonl  dedup_v2_replay_flash_lite_prompt_v8_verified.jsonl  dedup_v2_replay_flash_lite_prompt_v9.jsonl  dedup_v2_replay_flash_lite_prompt_v9b.jsonl  dedup_v2_replay_flash_lite_prompt_v9c.jsonl  (+10 more)
(+578 files in other folders)
