[project]
name = "werewolf-game"
version = "0.1.0"
description = "LangGraph Werewolf game agents modularized from exercise 7."
readme = "README.md"
requires-python = "==3.11.12"
authors = [{ name = "liuhaochen" }]
dependencies = [
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "langgraph>=0.2.0,<0.3.0",
    "langfuse>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pytoml>=0.1.21,<0.2.0",
    "trustcall>=0.0.39,<0.0.40",
]

[project.scripts]
werewolf-game = "Agents.main:main"

[tool.poetry]
packages = [{ include = "Agents" }]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
