[project]
name = "werewolf-game"
version = "0.1.0"
description = "LangGraph Werewolf game agents modularized from exercise 7."
readme = "README.md"
requires-python = "==3.11.12"
authors = [{ name = "liuhaochen" }]
dependencies = [
    "langchain-core==1.3.3",
    "langchain-google-genai==4.2.2",
    "langchain==1.2.18",
    "langgraph==1.1.10",
    "langfuse==3.14.6",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "pytoml==0.1.21",
    "trustcall==0.0.39",
    "numpy==2.4.4",
    "scipy>=1.16.0",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "langchain-google-vertexai (>=3.2.3,<4.0.0)",
]

[project.scripts]
werewolf-game = "Agents.main:main"
memory-batch-dedup = "Agents.memory_batch_deduplication:main"
eval-build-dataset = "evaluation.experiments.dataset_builder:main"
eval-summary = "evaluation.experiments.summary:main"
eval-retrieval = "evaluation.experiments.retrieval:main"
eval-application = "evaluation.experiments.application:main"
eval-captured = "evaluation.experiments.captured:main"
eval-e2e = "evaluation.experiments.e2e:main"
eval-build-extraction-dataset = "evaluation.experiments.extraction_builder:main"
eval-build-dedup-dataset = "evaluation.experiments.dedup_builder:main"
eval-extraction = "evaluation.experiments.extraction_eval:main"
eval-dedup = "evaluation.experiments.dedup_eval:main"

[tool.poetry]
packages = [{ include = "Agents" }, { include = "evaluation" }]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
